--- a/guide/css/prettify.css
+++ b/guide/css/prettify.css
@@ -1,163 +1,179 @@
 /* GitHub Theme */
+
 /* Pretty printing styles. Used with prettify.js. */
+
 /* SPAN elements with the classes below are added by prettyprint. */
+
 /* plain text */
+
 .pln {
-  color: #333333;
+    color: #333333;
 }
-.prettyprint{overflow:auto!important;}
+
+.prettyprint {
+    overflow: auto!important;
+}
 
 @media screen {
-  /* string content */
-  .str {
-    color: #dd1144;
-  }
+    /* string content */
+    .str {
+        color: #dd1144;
+    }
 
-  /* a keyword */
-  .kwd {
-    color: #333333;
-  }
+    /* a keyword */
+    .kwd {
+        color: #333333;
+    }
 
-  /* a comment */
-  .com {
-    color: #999988;
-  }
+    /* a comment */
+    .com {
+        color: #999988;
+    }
 
-  /* a type name */
-  .typ {
-    color: #445588;
-  }
+    /* a type name */
+    .typ {
+        color: #445588;
+    }
 
-  /* a literal value */
-  .lit {
-    color: #445588;
-  }
+    /* a literal value */
+    .lit {
+        color: #445588;
+    }
 
-  /* punctuation */
-  .pun {
-    color: #333333;
-  }
+    /* punctuation */
+    .pun {
+        color: #333333;
+    }
 
-  /* lisp open bracket */
-  .opn {
-    color: #333333;
-  }
+    /* lisp open bracket */
+    .opn {
+        color: #333333;
+    }
 
-  /* lisp close bracket */
-  .clo {
-    color: #333333;
-  }
+    /* lisp close bracket */
+    .clo {
+        color: #333333;
+    }
 
-  /* a markup tag name */
-  .tag {
-    color: navy;
-  }
+    /* a markup tag name */
+    .tag {
+        color: navy;
+    }
 
-  /* a markup attribute name */
-  .atn {
-    color: teal;
-  }
+    /* a markup attribute name */
+    .atn {
+        color: teal;
+    }
 
-  /* a markup attribute value */
-  .atv {
-    color: #dd1144;
-  }
+    /* a markup attribute value */
+    .atv {
+        color: #dd1144;
+    }
 
-  /* a declaration */
-  .dec {
-    color: #333333;
-  }
+    /* a declaration */
+    .dec {
+        color: #333333;
+    }
 
-  /* a variable name */
-  .var {
-    color: teal;
-  }
+    /* a variable name */
+    .var {
+        color: teal;
+    }
 
-  /* a function name */
-  .fun {
-    color: #990000;
-  }
+    /* a function name */
+    .fun {
+        color: #990000;
+    }
 }
+
 /* Use higher contrast and text-weight for printable form. */
-@media print, projection {
-  .str {
-    color: #006600;
-  }
 
-  .kwd {
-    color: #006;
-    font-weight: bold;
-  }
+@media print,
+projection {
+    .str {
+        color: #006600;
+    }
 
-  .com {
-    color: #600;
-    font-style: italic;
-  }
+    .kwd {
+        color: #006;
+        font-weight: bold;
+    }
 
-  .typ {
-    color: #404;
-    font-weight: bold;
-  }
+    .com {
+        color: #600;
+        font-style: italic;
+    }
 
-  .lit {
-    color: #004444;
-  }
+    .typ {
+        color: #404;
+        font-weight: bold;
+    }
 
-  .pun, .opn, .clo {
-    color: #444400;
-  }
+    .lit {
+        color: #004444;
+    }
 
-  .tag {
-    color: #006;
-    font-weight: bold;
-  }
+    .pun,
+    .opn,
+    .clo {
+        color: #444400;
+    }
 
-  .atn {
-    color: #440044;
-  }
+    .tag {
+        color: #006;
+        font-weight: bold;
+    }
 
-  .atv {
-    color: #006600;
-  }
+    .atn {
+        color: #440044;
+    }
+
+    .atv {
+        color: #006600;
+    }
 }
+
 /* Style */
+
 pre.prettyprint {
-  background: #F0F0F0;
-  font-family: Menlo, "Bitstream Vera Sans Mono", "DejaVu Sans Mono", Monaco, Consolas, monospace;
-  font-size: 12px;
-  line-height: 1.5;
-  border: 1px solid #cccccc;
-  padding: 0;
+    background: #F0F0F0;
+    font-family: Menlo, "Bitstream Vera Sans Mono", "DejaVu Sans Mono", Monaco, Consolas, monospace;
+    font-size: 12px;
+    line-height: 1.5;
+    border: 1px solid #cccccc;
+    padding: 0;
 }
 
 /* Specify class=linenums on a pre to get line numbering */
+
 ol.linenums {
-  margin-top: 0;
-  margin-bottom: 0;
-  color: #888;
+    margin-top: 0;
+    margin-bottom: 0;
+    color: #888;
 }
 
 .linenums li {
-  background: #FAFAFA;
-  padding-left: 10px;
-  border-left: 1px solid #CCC;
+    background: #FAFAFA;
+    padding-left: 10px;
+    border-left: 1px solid #CCC;
 }
 
 .linenums li {
-  padding-top: 5px;
+    padding-top: 5px;
 }
 
 .linenums li + li {
-  padding-top: 0;
+    padding-top: 0;
 }
 
 .linenums li:last-child {
-  padding-bottom: 5px;
+    padding-bottom: 5px;
 }
 
 
 
 /* IE indents via margin-left */
+
 li.L0,
 li.L1,
 li.L2,
@@ -168,14 +184,15 @@ li.L6,
 li.L7,
 li.L8,
 li.L9 {
-  /* */
+    /* */
 }
 
 /* Alternate shading for lines */
+
 li.L1,
 li.L3,
 li.L5,
 li.L7,
 li.L9 {
-  /* */
+    /* */
 }
